Mobile alignment issues

--- a/ugly.css
+++ b/ugly.css
@@ -538,6 +538,7 @@ img {
 
 	.image-container {
 		border: none;
+		align-items: flex-start;
 	}
 
 	img {
